--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,32 @@
-.items{
-    margin: 10px
+.container {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
 }
+  
+.contenedorBotones{
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto)
+}
+  
+  h4{
+    color: whitesmoke
+  }
+
+  @media screen and (max-width: 700px) {
+    .container {
+        margin: 20px;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+        grid-auto-rows: minmax(100px, auto);
+      }
+      .foto {
+        height:100%
+      }
+  }
